--- a/notes-app/src/Notes/NoteApp/NotesApp.css
+++ b/notes-app/src/Notes/NoteApp/NotesApp.css
@@ -46,9 +46,9 @@ body{
     }
 
     .mainNote {
-        width: 60vw;
+        width: 100%;
         background: #ffffff;
-        transform: translateX(5%);
+        transform: translateX(10%);
         box-shadow: 0px 1px 17px 1px rgba(0, 0, 0, 0.25);
         height: 80vh;
         display: flex;
@@ -60,6 +60,8 @@ body{
         border-radius: 30px;
 
     }
+
+
 }
 
 
@@ -86,9 +88,11 @@ body{
     }
 
     .noteHeader{
-        border-bottom: 1px solid rgb(134, 134, 134);
         margin-bottom: 1rem;
 
+    }
+    .sideBar{
+        padding: 0rem 2rem;
     }
 }
 
