--- a/notes-app/src/Notes/NoteApp/mobileCss.css
+++ b/notes-app/src/Notes/NoteApp/mobileCss.css
@@ -34,3 +34,21 @@ body{
     height: 100vh;
 }
 }
+
+.addNote{
+    align-self: end;
+    .AddNoteBtn{
+        background-color:#4E61F6;
+        color: #fff;
+        border-radius: 0.8rem;
+        font-size: 18px;
+        padding: 1rem;
+        box-sizing: border-box;
+        margin-top: 0.8rem;
+    }
+}
+
+.addNoteContainer{
+    display: flex;
+    justify-content: end;
+}
