--- a/notes-app/src/Notes/NoteTitle/NoteTitle.css
+++ b/notes-app/src/Notes/NoteTitle/NoteTitle.css
@@ -4,7 +4,20 @@
     align-items: center;
     justify-content: space-between;
     text-transform: capitalize;
-    margin: 0.8rem 0rem
+    margin: 0.8rem 0rem;
+    padding: 0.1rem 0.4rem;
+    border-bottom: 1.5px solid #d2d2d2;
+    border-top: 0.5px solid #d2d2;
+    padding: 0.4rem;
+    
+
+    &:hover{
+        padding: 0.3rem 0.6rem;
+        /* transform: translatex(2px); */
+        box-shadow: 1px 1px 7px 1px #d2d2d2;
+        border-radius: 0.5rem;
+        transition: 0.2s ease;
+    }
 }
 
 .noteTitles{
