almost finsihed milestone 2 - finshed to change the title on each note

--- a/notes-app/src/Notes/NoteApp/mobileCss.css
+++ b/notes-app/src/Notes/NoteApp/mobileCss.css
@@ -33,22 +33,62 @@ body{
     width: 98vw;
     height: 100vh;
 }
-}
 
-.addNote{
-    align-self: end;
-    .AddNoteBtn{
-        background-color:#4E61F6;
-        color: #fff;
-        border-radius: 0.8rem;
-        font-size: 18px;
-        padding: 1rem;
-        box-sizing: border-box;
-        margin-top: 0.8rem;
+.formContainer{
+    padding: 0 0 0 0.5rem;
+
+    h1{
+        font-size: 24px;
     }
 }
 
-.addNoteContainer{
+.noteForm {
+    width: 100vw;
     display: flex;
-    justify-content: end;
+    justify-content: flex-start;
+    height: 90vh;
 }
+
+form{
+    width: 90%;
+}
+
+.sideNote{
+    width: 100%;
+}
+.inputTitle, .inputNote, .inputPriority{
+    width: 100%;
+}
+
+
+.noteHeader{
+    height: 15%;
+}
+.sideBar{
+    padding: 0rem 2rem;
+
+    .addNote{
+        align-self: end;
+        .AddNoteBtn{
+            background-color:#4E61F6;
+            color: #fff;
+            border-radius: 0.8rem;
+            font-size: 18px;
+            padding: 1rem;
+            box-sizing: border-box;
+            margin-top: 0.8rem;
+        }
+    }
+    
+    .addNoteContainer{
+        display: flex;
+        justify-content: end;
+    }
+}
+
+}
+
+
+
+
+ 
