--- a/notes-app/src/Notes/Users.jsx/Users.css
+++ b/notes-app/src/Notes/Users.jsx/Users.css
@@ -1,12 +1,86 @@
 .usersModal{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    z-index: 1;
-    height: 500px;
-    width: 400px;
+    z-index: 1; 
+    width: 20%;
+    height: 60%;
     box-sizing: border-box;
-    background-color: gray;
-    border: 1px solid black;
-    
+    background-color: rgb(255, 255, 255);
+    border-radius: 1.4rem;
+    padding: 0.8rem 1.2rem;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    color: #131927;
+
+    border: none;
+    h3{
+        margin: 0rem;
+    }
 }
+
+
+.usersCotnainer{
+    display: flex;
+    flex-direction: column;
+    gap: 0.2rem;
+    background-color: #f9fafb;
+}
+
+.userRow{
+    display: flex;
+    justify-content: space-between;
+    padding: 0.4rem;
+    box-sizing: border-box;
+    cursor: pointer;
+
+    &:hover{
+        padding: 0.3rem 0.6rem;
+        /* transform: translatex(2px); */
+        box-shadow: 1px 1px 7px 1px #d2d2d2;
+        border-radius: 0.5rem;
+        transition: 0.2s ease;
+    }
+}
+
+.or{
+    text-align: justify;
+    font-size: 12px;
+}
+
+.createUser{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+
+    .addUser{
+        text-align: justify;
+        font-size: 16px;
+    }
+
+    .createUserInput{
+        display: flex;
+        height: 50%;
+        justify-content: space-between;
+
+        input{
+            width: 70%;
+            background: #f1f1f1;
+            border: 1px solid #ece7e7;
+            
+            border-radius: 0.3rem;
+            box-sizing: border-box;
+        }
+
+        button{
+            width: 20%;
+            font-size: 14px;
+            background: #4E61F6;
+            color: #fff;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+    }
+}
+
+
