--- a/notes-app/src/Notes/NoteMain/Note.css
+++ b/notes-app/src/Notes/NoteMain/Note.css
@@ -10,6 +10,10 @@
         padding: 1.5rem;
         box-sizing: border-box;
 
+        label{
+            font-weight: 700;
+        }
+
     .inputBox{
         display: flex;
         flex-direction: column;
