--- a/notes-app/src/Notes/Users.jsx/Users.css
+++ b/notes-app/src/Notes/Users.jsx/Users.css
@@ -1,7 +1,7 @@
 .usersModal{
     z-index: 1; 
     width: 20%;
-    height: 60%;
+    height: 40%;
     box-sizing: border-box;
     background-color: rgb(255, 255, 255);
     border-radius: 1.4rem;
@@ -15,6 +15,42 @@
     border: none;
     h3{
         margin: 0rem;
+        text-align: justify;
+        font-size: 24px;
+    }
+
+}
+
+
+.switchContainer {
+    position: absolute;
+    top: 3%;
+    display: flex;
+    gap: 0.8rem;
+    right: 15%;
+    align-items: center;
+
+    .switchBtn{
+        color: #4E61F6;
+        border: #4E61F6 2px solid;
+        border-radius: 0.8rem;
+        padding: 0.4rem 1rem;
+        box-sizing: border-box;
+        font-size: 12px;
+
+        &:hover{
+            
+            
+            box-shadow: 1px 1px 7px 1px rgba(78, 97, 246, 0.4);
+            
+            transition: 0.2s ease;
+        }
+    }
+    
+
+    span{
+        text-transform: capitalize;
+        font-weight:500;
     }
 }
 
@@ -24,6 +60,7 @@
     flex-direction: column;
     gap: 0.2rem;
     background-color: #f9fafb;
+    border-radius: 0.4rem;
 }
 
 .userRow{
@@ -51,6 +88,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
+    gap: 0.4rem;
 
     .addUser{
         text-align: justify;
