--- a/notes-app/src/Notes/Users.jsx/Users.css
+++ b/notes-app/src/Notes/Users.jsx/Users.css
@@ -1,5 +1,5 @@
 .usersModal{
-    z-index: 1; 
+    z-index: 5; 
     width: 20%;
     height: 40%;
     box-sizing: border-box;
@@ -13,6 +13,11 @@
     color: #131927;
 
     border: none;
+
+    .switchUserHeadeTop{
+        display: flex;
+
+    }
     h3{
         margin: 0rem;
         text-align: justify;
@@ -52,6 +57,16 @@
         text-transform: capitalize;
         font-weight:500;
     }
+}
+
+.modalBackdrop{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 2;
+    background-color: rgba(0, 0, 0, 0.4);
 }
 
 
