--- a/src/SideBar/SideBarStyle/addBtn.css
+++ b/src/SideBar/SideBarStyle/addBtn.css
@@ -10,14 +10,16 @@
                 color: #fff;
                 border-radius: 0.8rem;
                 font-size: 14px;
-                padding: 0.4rem;
+                padding: 0.8em 1em;
                 border: none;
-                border-radius: 0.2rem;
+                border-radius: 0.8rem;
                 cursor: pointer;
                 transition: 0.1s  ease-in-out;
+                min-width: 136px;
                 
                 &:hover{
-                    padding: 0.5rem;
+                    box-shadow: 1px 1px 7px 1px rgba(78, 97, 246, 0.4);
                 }
             }
         }
+
