--- a/src/app/styleApp/notesApp.css
+++ b/src/app/styleApp/notesApp.css
@@ -8,7 +8,6 @@
 .sideBar{
     width: 20%;
     background: #F9FAFB;
-    
     display: flex;
     flex-direction: column;
     box-sizing: border-box;
@@ -18,6 +17,8 @@
 
     h1{
         text-align: center;
+        margin-top: 0;
+        font-size: 24px;
     }
 }
 
@@ -29,9 +30,9 @@
     width: 80%;
     background: #ffffff;
     margin: auto;
-    margin-top: 4rem;
+    margin-top: 108px;
     box-shadow: 0px 1px 17px 1px rgba(0, 0, 0, 0.25);
-    height: 70%;
+    height: 80%;
     display: flex;
     flex-direction: column;
     gap: 1rem;
