--- a/src/app/styleApp/notesApp.css
+++ b/src/app/styleApp/notesApp.css
@@ -15,6 +15,19 @@
     box-shadow: 1px 2px 4px #dcdada;
     overflow: auto;
 
+    &::-webkit-scrollbar {
+        width: 0;
+        background: transparent; 
+    }
+
+    &:hover::-webkit-scrollbar {
+        width: 6px;
+    }
+    &:hover::-webkit-scrollbar-thumb {
+        background-color: rgba(207, 207, 207, 0.4);
+        border-radius: 4px;
+    }
+
     h1{
         text-align: center;
         margin-top: 0;
