--- a/src/users/usersStyle/usersStyle.css
+++ b/src/users/usersStyle/usersStyle.css
@@ -23,9 +23,7 @@
         text-align: justify;
         font-size: 24px;
     }
-
 }
-
 
 .switchContainer {
     position: absolute;
@@ -74,6 +72,22 @@
     background-color: #f9fafb;
     border-radius: 0.4rem;
     overflow: auto;
+    height: 40%;
+    min-height: 40%;
+    overflow-x:hidden;
+
+    &::-webkit-scrollbar {
+        width: 0;
+        background: transparent; 
+    }
+
+    &:hover::-webkit-scrollbar {
+        width: 6px;
+    }
+    &:hover::-webkit-scrollbar-thumb {
+        background-color: rgba(207, 207, 207, 0.4);
+        border-radius: 4px;
+    }
 }
 
 .userRow{
@@ -82,13 +96,13 @@
     padding: 0.4rem;
     box-sizing: border-box;
     cursor: pointer;
+    border-top: 0.5px solid rgba(143, 143, 143, 0.133);
+    transition: 0.2s ease;
 
     &:hover{
-        padding: 0.3rem 0.6rem;
-        /* transform: translatex(2px); */
+        transform: scale(1.02, 1.02);
         box-shadow: 1px 1px 7px 1px #d2d2d2;
-        border-radius: 0.5rem;
-        transition: 0.2s ease;
+        border-radius: 0.4rem;
     }
 }
 
@@ -143,3 +157,32 @@
 }
 
 
+
+
+@media (max-width: 475px) {
+    .usersModal{
+        width: 90%;
+        height: 40%;
+    }
+
+    .createUser{
+        justify-content: flex-start;
+
+    .createUserInput{
+        display: flex;
+        flex-direction: column;
+        gap: 1em;
+        padding: 1em;
+        box-sizing: border-box;
+        
+        input{
+            width: 100%;
+            height: 10vh;
+            
+        }
+        button{
+            width: 100%;
+        }
+    }
+    }
+}
