fixed mobile title displayd on pages. add user&note btn

--- a/src/MOBILE/mobile.css
+++ b/src/MOBILE/mobile.css
@@ -3,7 +3,7 @@
     background-color: #fff;
     position: absolute;
     left: 3%;
-    top: 3.5%;
+    top: 40%;
     border: none;
 }
 
@@ -15,10 +15,11 @@
 
 .noteHeader{
     display: flex;
-        flex-direction: row-reverse;
-        align-items: center;
-        justify-content: center;
-        width: 90%;
+    flex-direction: row-reverse;
+    align-items: center;
+    justify-content: center;
+    width: 90%;
+    position: relative;
 }
 
 @media( max-width:431px) {
@@ -67,58 +68,53 @@ form{
     height: 75px;
     width: 100vw;
     border-bottom: 1px solid #4E61F6 ;
+    
+
+    h1{
+        margin: 0;
+    }
 }
 .sideBar{
     padding: 0rem 2rem;
 
-    .addNote{
-        align-self: end;
-        .AddNoteBtn{
-            background-color:#4E61F6;
-            color: #fff;
-            border-radius: 0.8rem;
-            font-size: 18px;
-            padding: 1rem;
-            box-sizing: border-box;
-            margin-top: 0.8rem;
-        }
-    }
-    
-    .addNoteContainer{
-        display: flex;
-        justify-content: end;
-    }
+  
 }
 
+.addNoteContainer, .addUserContainer{
+    display: flex;
+    justify-content: end;
 }
 
+.addNote{
+    align-self: end;
 
+}}
 
-/*  ====== Mobile Add User ========= */
-
-.addUserContainer {
+/* .addUserContainer {
     position: absolute;
     top: 10%;
     display: flex;
     gap: 0.8rem;
     right: 4%;
     align-items: center;
-    .addUserBtn {
-        background-color:#4E61F6;
-        color: #fff;
-        border-radius: 0.8rem;
-        font-size: 14px;
-        padding: 0.8em 1em;
-        border: none;
-        border-radius: 0.8rem;
-        cursor: pointer;
-        transition: 0.1s  ease-in-out;
-        min-width: 136px;
 
-        &:hover{
-            box-shadow: 1px 1px 7px 1px rgba(78, 97, 246, 0.4);
-            transition: 0.2s ease;
-        }
+} */
+
+.addUserBtn ,.AddNoteBtn {
+    background-color:#4E61F6;
+    color: #fff;
+    border-radius: 0.8rem;
+    font-size: 14px;
+    padding: 0.8em 1em;
+    border: none;
+    border-radius: 0.8rem;
+    cursor: pointer;
+    transition: 0.1s  ease-in-out;
+    min-width: 136px;
+    margin-top: 0.8em;
+
+    &:hover{
+        box-shadow: 1px 1px 7px 1px rgba(78, 97, 246, 0.4);
+        transition: 0.2s ease;
     }
 }
-
