finsihed the project

--- a/src/mainNote/mainNoteStyle/Note.css
+++ b/src/mainNote/mainNoteStyle/Note.css
@@ -26,9 +26,21 @@
         border: 1px solid #ece7e7;
         padding: 0.4rem;
         border-radius: 0.3rem;
-        box-sizing: border-box;
-    
+        box-sizing: border-box; 
     }
+
+    .inputError {
+        width: 98%;
+        background: #f1f1f1;
+        border: 1px solid #ece7e7;
+        padding: 0.4rem;
+        border-radius: 0.3rem;
+        box-sizing: border-box;
+        box-shadow: 0 0 4px rgba(255, 0, 0, 0.3); 
+        color: #d9534f; 
+        font-size: 0.85rem;
+        margin-top: 0.25rem;
+      }
     
     .inputNote{
         height: 40vh;
